[gd_scene load_steps=10 format=3 uid="uid://cbeitv7iimw6q"]

[ext_resource type="Script" uid="uid://cm7ggfri7cth7" path="res://Scenes/login.gd" id="1_5cd0j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cd0j"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.754952, 0.916185, 0.989815, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0.178904, 0.148722, 0.440498, 0.266667)
shadow_size = 2
shadow_offset = Vector2(1.665, 2.55)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbxdl"]
bg_color = Color(0.646066, 0.862285, 0.9486, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_color = Color(0.154419, 0.59907, 0.755579, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxa43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrdhx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5iow8"]
content_margin_left = 10.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_bottom = 3
border_color = Color(0.207843, 0.654902, 0.819608, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88cqn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7a0j"]
bg_color = Color(0.442079, 0.890663, 0.550015, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.204493, 0.452663, 0.351853, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxa43"]
bg_color = Color(0.6, 0.6, 0.6, 0.596078)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="login_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5cd0j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Login_window" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 107.0
offset_right = -17.0
offset_bottom = -107.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(193, 427)

[node name="register" type="Panel" parent="Login_window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -239.0
offset_right = 163.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5cd0j")

[node name="Panel" type="Panel" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -5.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hbxdl")

[node name="window_title" type="Label" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 92.0
offset_top = 10.0
offset_right = -92.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 26
text = "Login"
horizontal_alignment = 1
uppercase = true

[node name="username_title" type="Label" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 17.0
offset_top = 79.0
offset_right = -17.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.207843, 0.654902, 0.819608, 1)
text = "Username"

[node name="password_title" type="Label" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 17.0
offset_top = 171.0
offset_right = -17.0
offset_bottom = 194.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.207843, 0.654902, 0.819608, 1)
text = "Password"

[node name="password_input" type="LineEdit" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 28.0
offset_top = 36.5
offset_right = -29.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_colors/font_color = Color(0.447059, 0.760784, 0.87451, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_fxa43")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_vrdhx")
theme_override_styles/normal = SubResource("StyleBoxFlat_5iow8")
placeholder_text = "..."

[node name="username_input" type="LineEdit" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 29.0
offset_top = -55.0
offset_right = -29.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_placeholder_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_colors/font_color = Color(0.447059, 0.760784, 0.87451, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_fxa43")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_vrdhx")
theme_override_styles/normal = SubResource("StyleBoxFlat_5iow8")

[node name="register_btn" type="Button" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = 346.0
offset_right = 103.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.207843, 0.654902, 0.819608, 1)
text = "Don't have an account? Register"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Login_window/register"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -56.0
offset_right = -13.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3

[node name="submit_btn" type="Button" parent="Login_window/register/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_88cqn")
theme_override_styles/normal = SubResource("StyleBoxFlat_m7a0j")
text = "Login"

[node name="toast_notification" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 289.0
offset_right = 41.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fxa43")
text = "Success!"
horizontal_alignment = 1
